# CPPTreesitter

./: CMakeLists.txt  README.md  code.cpp  main.cpp
.cache/clangd/index/: Language.cpp.6AF11290FBD738C5.idx  Language.hpp.BF8FA272D8629456.idx  Node.cpp.C3699B247D6C98D0.idx  Node.hpp.383B82D291DEE3E1.idx  Parser.cpp.388B12021952DBFD.idx  Parser.hpp.1CF4334C2823EFCF.idx  Query.cpp.F28F3BB63771EE26.idx  Query.hpp.487A32C81A1165DC.idx  TSLanguages.hpp.DD34B7441002D547.idx  Tree.cpp.1CC3F33D31D31502.idx  Tree.hpp.9A066D8B0DB38527.idx  Treesitter.hpp.20324701660CC160.idx  TreesitterStruct.hpp.F1377B9F47444A1D.idx  alloc.c.9FB89211D8CC03F2.idx  alloc.h.543CB85206CF9CCC.idx  array.h.37BEC11E3BC4F823.idx  atomic.h.1BC990F296D6CABB.idx  clock.h.435745E9BA67B7D4.idx  error_costs.h.ABC5C02579BB0A0B.idx  get_changed_ranges.c.CD43D0E68492A424.idx  get_changed_ranges.h.4D716B5F95D2D5F8.idx  host.h.C4595AF9DCBB4B5E.idx  language.c.BF876AC7266CFB80.idx  language.h.7F4BDD25CB248CEF.idx  length.h.AA2D19172AD97374.idx  lexer.c.952E68D68EB25891.idx  lexer.h.B8F3577BB53B345A.idx  lib.c.F0FD27B49485A65E.idx  main.cpp.065602FCA061E13F.idx  node.c.D9E22A4F1FA5A7D9.idx  parser.c.C5D7389C9AE61B6F.idx  point.h.98204285D5A9DCA3.idx  query.c.341163CDBEBD651C.idx  reduce_action.h.89B970217DB5F457.idx  reusable_node.h.AC721D05580CE677.idx  scanner.cc.327D458D357BF7AF.idx  stack.c.2347CD4F42EEFD1C.idx  stack.h.B9D716D2145CAB57.idx  subtree.c.66EB17DF18A9D001.idx  subtree.h.C1E4B0A095721495.idx  (+7 more)
Source/: Language.cpp  Language.hpp  Node.cpp  Node.hpp  Parser.cpp  Query.cpp  TSLanguages.hpp  Tree.cpp
include/cpp-treesitter/: Language.hpp  Node.hpp  Parser.hpp  Query.hpp  Tree.hpp  Treesitter.hpp  TreesitterStruct.hpp
src/: Language.cpp  Node.cpp  Parser.cpp  Query.cpp  Tree.cpp
